# googletestTemplate

./: CMakeLists.txt  README.md  main.cpp  test.cpp
Coin/: CMakeLists.txt  Coin.cpp  Coin.h
RandomGenerator/: CMakeLists.txt  IRandomGenerator.h  RandomGenerator.cpp  RandomGenerator.h  RandomGeneratorMock.h
